@@ -42,3 +42,5 @@ c1(ncc2)n2cco1 imidazo[2,1-b]oxazole
 c1(nnc2)n2ccs1 thiazolo[2,3-c][1,2,4]triazole
 c1(nnc2)n2cco1 oxazolo[2,3-c][1,2,4]triazole
 c1(n2cccc2)ccccc1 1-phenyl-1H-pyrrole
+c16.c21.c32.c43.c54.c65 benzene
+
